Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3825

epic plugin does not compile on OmniOS

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.3.2, 6.0.0
    • Plugins
    • None

    Description

        CXX      epic.lo
      ../../../../../plugins/experimental/epic/epic.cc: In function 'void TSPluginInit(int, const char**)':
      ../../../../../plugins/experimental/epic/epic.cc:305:110: error: deprecated conversion from string constant to 'char*' [-Werror=write-strings]
           {"directory", required_argument, NULL, 'd'}, {"period", required_argument, NULL, 'p'}, {NULL, 0, NULL, 0}};
                                                                                                                    ^
      ../../../../../plugins/experimental/epic/epic.cc:305:110: error: deprecated conversion from string constant to 'char*' [-Werror=write-strings]
      

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: