TS-3825 epic plugin does not compile on OmniOS

(cherry picked from commit 4019b970816f33716943e6a38fb4c9b2d70c8bfe)